--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-root-plugin": "^0.10.0",
+    "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "sass-loader": "^7.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
