--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "lint": "eslint \"**/*.{js,jsx}\"",
     "build": "webpack",
-    "start": "webpack-dev-server --open",
+    "start": " eslint \"./**/*.{js,jsx}\" && webpack-dev-server --open",
     "watch": "webpack --watch"
   },
   "dependencies": {
@@ -19,6 +20,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-root-plugin": "^0.10.0",
