--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "build": "webpack",
-    "start": " eslint \"./**/*.{js,jsx}\" && webpack-dev-server --open",
+    "build": "eslint \"./**/*.{js,jsx}\" && webpack",
+    "start": "webpack-dev-server --open",
     "watch": "webpack --watch"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -30,6 +31,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.8.6",
     "sass-loader": "^7.2.0",
     "style-loader": "^0.23.1",
