--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,11 @@
         "extends": [
                 "plugin:react/recommended"
         ],
+        "settings": {
+                "react": {
+                        "version": "detect"
+                }
+        },
         "parserOptions": {
                 "ecmaVersion": 6,
                 "sourceType": "module",
