--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "scripts": {
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "build": "eslint \"./**/*.{js,jsx}\" && webpack",
-    "start": "webpack-dev-server --open",
-    "watch": "webpack --watch"
+    "lintbuild": "eslint \"./**/*.{js,jsx}\" && webpack --config webpack.prod.config.js",
+    "build": "webpack --config webpack.prod.config.js",
+    "start": "webpack-dev-server --open --config webpack.dev.config.js"
   },
-  "dependencies": {
-    "lodash": "^4.17.15"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -18,7 +16,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
@@ -28,6 +25,7 @@
     "html-webpack-root-plugin": "^0.10.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -37,7 +35,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   },
   "author": "Neil G. Lindberg",
   "license": "ISC",
